# angband-mechanicum

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.tickets/: aa-1j76.md  aa-1y46.md  aa-36n5.md  aa-7msm.md  aa-9fpk.md  aa-gb1q.md  aa-mneg.md  aa-ndq1.md  aa-nkpd.md  aa-uw40.md  am-0b7c.md  am-0e2f.md  am-0tq0.md  am-0w4s.md  am-10n4.md  am-12uy.md  am-19qp.md  am-1d76.md  am-1eds.md  am-1hep.md  am-1ohi.md  am-1s26.md  am-1up6.md  am-1z1j.md  am-2akc.md  am-2dit.md  am-2ffi.md  am-3tlk.md  am-422f.md  am-4811.md  am-571y.md  am-5mdw.md  am-5tuy.md  am-5vkd.md  am-5vte.md  am-620f.md  am-6448.md  am-6a7g.md  am-6aod.md  am-6gfp.md  (+88 more)
docs/: architecture.md  context.md
docs/plans/: realtime-arpg.md
src/angband_mechanicum/: __init__.py  app.py  theme.py
src/angband_mechanicum/assets/: npc_portraits.py  placeholder_art.py  portraits.py
src/angband_mechanicum/engine/: combat_engine.py  dungeon_entities.py  dungeon_gen.py  dungeon_items.py  dungeon_level.py  dungeon_profiles.py  game_engine.py  history.py  save_manager.py  story_starts.py
src/angband_mechanicum/screens/: __init__.py  api_key_screen.py  character_setup_screen.py  combat_screen.py  dungeon_screen.py  game_screen.py  hall_of_dead_screen.py  menu_screen.py  story_select_screen.py
src/angband_mechanicum/styles/: game.tcss
tests/: conftest.py  test_app.py  test_arrow_nav.py  test_combat_engine.py  test_dungeon_entities.py  test_dungeon_gen.py  test_dungeon_level.py  test_dungeon_screen.py  test_e2e.py  test_game_engine.py  test_save_manager.py  test_widgets.py
(+11 files in other folders)
