[project]
name = "angband-mechanicum"
version = "0.1.0"
description = "A CLI game: Adeptus Mechanicus Tech-Priest on a forge world"
readme = "README.md"
authors = [
    { name = "Nathan Clonts", email = "nathanclonts@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
]

[project.scripts]
angband-mechanicum = "angband_mechanicum.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "textual.*",
]
ignore_missing_imports = true
